@@ -1567,25 +1567,14 @@ textual parts.")
 
 (deffoo nnimap-request-thread (header &optional group server)
   (when (nnimap-possibly-change-group group server)
-      (let* ((id (mail-header-id header))
-	 (refs (split-string
-		(or (mail-header-references header)
-		    "")))
-	 (cmd (let ((value
-		     (format
-		      "(OR HEADER REFERENCES %s HEADER Message-Id %s)"
-		      id id)))
-		(dolist (refid refs value)
-		  (setq value (format
-			       "(OR (OR HEADER Message-Id %s HEADER REFERENCES %s) %s)"
-			       refid refid value)))))
-	 (result (with-current-buffer (nnimap-buffer)
-		   (nnimap-command  "UID SEARCH %s" cmd))))
-    (when result
-      (gnus-fetch-headers
-       (and (car result) (delete 0 (mapcar #'string-to-number
-					   (cdr (assoc "SEARCH" (cdr result))))))
-       nil t)))))
+    (let* ((cmd (nnimap-make-thread-query header))
+	   (result (with-current-buffer (nnimap-buffer)
+		     (nnimap-command  "UID SEARCH %s" cmd))))
+      (when result
+	(gnus-fetch-headers
+	 (and (car result) (delete 0 (mapcar #'string-to-number
+					     (cdr (assoc "SEARCH" (cdr result))))))
+	 nil t)))))
 
 (defun nnimap-possibly-change-group (group server)
   (let ((open-result t))
@@ -1950,6 +1939,21 @@ textual parts.")
 		    (list (cons 'junk 1))
 		  group-art))
 	  nnimap-incoming-split-list)))
+
+(defun nnimap-make-thread-query (header)
+  (let* ((id  (mail-header-id header))
+	 (refs (split-string
+		(or (mail-header-references header)
+		    "")))
+	(value
+	 (format
+	  "(OR HEADER REFERENCES %s HEADER Message-Id %s)"
+	  id id)))
+    (dolist (refid refs value)
+      (setq value (format
+		   "(OR (OR HEADER Message-Id %s HEADER REFERENCES %s) %s)"
+		   refid refid value)))))
+
 
 (provide 'nnimap)
 
